tests/shell/fail/pipefail.ish
nonexistent-cmd-h12 | cat
